--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
     android:gravity="center"
 
     tools:context=".MainActivity">
-<LinearLayout
+<ImageView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:src="@drawable/ic_person_pin_black_24dp"
-    >
+    android:layout_height="250dp"
+    android:src="@drawable/loginlogoicon"
+    android:padding="30dp"/>
 
-</LinearLayout>
+
 
     <TextView
         android:text="LOGIN FORM"
@@ -50,29 +50,35 @@
         android:text="Login"
         android:id="@+id/btnlogin"
         android:layout_width="200dp"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
-        android:background="#A93226"
+        android:background="#FFEE3E1A"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         />
 
     <TextView
         android:id="@+id/tvhavac"
-        android:layout_width="match_parent"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginRight="60dp"
         android:text="Don't Have an Account?"
-        android:textColor="#A93226" />
+        android:textSize="15dp"
+        android:fontFamily="sans-serif"
+        android:textColor="#F44336" />
 
     <Button
         android:text="Register"
         android:id="@+id/btnreg"
-        android:layout_width="250dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:background="#A93226"
+        android:background="#EE3E1A"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="-30dp"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"/>
+        android:textSize="15sp"/>
+
 
 </LinearLayout>
