--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
     android:gravity="center"
 
     tools:context=".MainActivity">
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:src="@drawable/loginlogoicon"
-    android:padding="30dp"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@drawable/loginlogoicon"
+        android:layout_marginTop="-80dp"
+        android:layout_marginBottom="-20dp"
+        android:padding="30dp"/>
 
 
 
@@ -22,10 +24,12 @@
         android:text="LOGIN FORM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textSize="24sp"
-        android:textColor="#A93226"
-        android:layout_gravity="center"/>
+        android:textColor="#EE3E1A"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        />
 
     <EditText
         android:id="@+id/etusername"
@@ -34,7 +38,7 @@
         android:text="  Enter Username"
         android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
         android:layout_width="300dp"
-        android:textColor="#7B241C"
+        android:textColor="#EE3E1A"
         android:layout_height="wrap_content"/>
 
     <EditText
@@ -43,7 +47,7 @@
         android:text="  Enter password"
         android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
         android:layout_width="300dp"
-        android:textColor="#7B241C"
+        android:textColor="#EE3E1A"
         android:layout_height="wrap_content"/>
 
     <Button
@@ -65,9 +69,10 @@
         android:gravity="center"
         android:layout_marginRight="60dp"
         android:text="Don't Have an Account?"
+        android:textStyle="bold"
         android:textSize="15dp"
         android:fontFamily="sans-serif"
-        android:textColor="#F44336" />
+        android:textColor="#EE3E1A" />
 
     <Button
         android:text="Register"
